# Attedence

./: .env.production.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.backend.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_locations_and_member_fields.py  0003_member_photo_thumbnail.py  0004_app_settings.py
backend/app/: bootstrap.py  config.py  main.py
backend/app/api/v1/: attendance.py  auth.py  lookups.py  members.py  recognition.py  reports.py  router.py  setup.py  visitors.py
backend/app/core/: deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  app_setting.py  attendance.py  bsg.py  church.py  facial_profile.py  leader.py  location.py  meeting.py  member.py  membership_history.py  user.py  visitor.py
backend/app/schemas/: auth.py  location.py  recognition.py  report.py  settings.py  setup.py  today.py  visitor.py
backend/app/services/: attendance.py  config_store.py  leader_resolver.py  photo_meta.py  photos.py  recognition_pipeline.py  visitors.py
backend/app/services/face/: engine.py  insightface_engine.py  quality.py
backend/app/telegram/: bot.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  privacy.html  styles.css
mobile/: README.md  pubspec.yaml
mobile/android/: gradle.properties
mobile/lib/: api.dart  main.dart  session.dart  theme.dart
(+37 files in other folders)
