[project]
name = "church-attendance-backend"
version = "0.1.0"
description = "Church Bible Study Attendance System - FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pgvector>=0.2.5",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    # NOTE: numpy pinned <2 — InsightFace's detector post-processing silently
    # returns zero detections under numpy 2.x. 0.7.3 + numpy 1.x is the proven combo.
    "numpy>=1.26,<2",
    # Face recognition (InsightFace + ONNX runtime). See app/services/face/.
    "insightface==0.7.3",
    "onnxruntime>=1.17,<1.20",
    "opencv-python-headless>=4.9",
    "pillow>=10.2",
    # Telegram bot
    "aiogram>=3.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
